# 2doParcial

./: .gitignore  CMakeLists.txt
src/: Lista.cpp  Lista.h  MailManager.cpp  MailManager.h  Nodo.cpp  Nodo.h  email.cpp  email.h  main.cpp
test/: CMakeLists.txt  mails-100.txt  mails-1000.txt  mails-2.txt  mails-20.txt  tests.cpp
